k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fiapx
  labels:
    name: fiapx
    project: fiap-soat-video
