k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiapx-ingress
  namespace: fiapx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  rules:
  - host: auth.fiapx
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
  - host: api.fiapx
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 81
  - host: worker.fiapx
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: worker-service
            port:
              number: 82
  - host: kibana.fiapx
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601

  - host: locust.fiapx
    http:
      paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: locust-master
                port:
                  number: 8089
